--- a/demo.html
+++ b/demo.html
@@ -11,7 +11,7 @@
 		console.log(search);
 		//console.log(JSON.parse(encodeURI(search.state)));
 
-		var postVal="client_id=ebef797a-c432-46cc-bc24-eba3fad9c5d7&scope=openid user.read mail.read&code="+search.code+"&redirect_uri=https%3A%2F%2Fgithub.com%2Fguoenyue%2FgetMStoken%2Fdemo.html&grant_type=authorization_code&client_secret=4bypk45U8nACbx4FUgSWgfN";
+		var postVal="client_id=ebef797a-c432-46cc-bc24-eba3fad9c5d7&scope=openid user.read mail.read&code="+search.code+"&redirect_uri=https%3A%2F%2Fguoenyue.github.io%2FgetMStoken%2Fdemo.html&grant_type=authorization_code&client_secret=4bypk45U8nACbx4FUgSWgfN";
 		// var xhr=new XMLHttpRequest();
 		// xhr.onload=function(re){
 		// 	console.log(xhr.responseText);
