--- a/demo.html
+++ b/demo.html
@@ -40,7 +40,7 @@
 				method:"get",
 				url:"https://graph.microsoft.com/v1.0/me",
 				headers:{
-					"Authorization","Basic "+search
+					"Authorization",search.token_type+" "+search.access_token
 				}
 			}).success(function(res){
 				console.log(res);
