--- a/demo.html
+++ b/demo.html
@@ -45,7 +45,7 @@
 			}).success(function(res){
 				console.log(res);
 			});
-			$.ajax({
+			/*$.ajax({
 				method:"get",
 				url:"https://graph.microsoft.com/v1.0/groups",
 				headers:{
@@ -53,7 +53,7 @@
 				}
 			}).success(function(res){
 				console.log(res);
-			})
+			})*/
 		//}
 		function parseSearch(search){
 			var oSearch={};
