--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<script>
-		window.location.href="https://login.microsoftonline.com/common/oauth2/v2.0/authorize?client_id=ebef797a-c432-46cc-bc24-eba3fad9c5d7&response_type=token&redirect_uri=https%3A%2F%2Fguoenyue.github.io%2FgetMStoken%2Fdemo.html&state=%7B%22client_id%22%3A%22ebef797a-c432-46cc-bc24-eba3fad9c5d7%22%2C%22network%22%3A%22aad%22%2C%22display%22%3A%22page%22%2C%22state%22%3A%22abcd%22%2C%22redirect_uri%22%3A%22https%3A%2F%2Fguoenyue.github.io%2FgetMStoken%2Fdemo.html%22%2C%22scope%22%3A%22user.read%2Cmail.send%22%2C%22callback%22%3A%22_hellojs_9mnhsgss%22%2C%22page_uri%22%3A%22https%3A%2F%2Fguoenyue.github.io%2FgetMStoken%2Findex.html%22%7D&scope=user.read&prompt=consent&nonce=12345";
+		window.location.href="https://login.microsoftonline.com/common/oauth2/v2.0/authorize?client_id=ebef797a-c432-46cc-bc24-eba3fad9c5d7&response_type=token&response_mode=form_post&redirect_uri=https%3A%2F%2Fguoenyue.github.io%2FgetMStoken%2Fdemo.html&state=%7B%22client_id%22%3A%22ebef797a-c432-46cc-bc24-eba3fad9c5d7%22%2C%22network%22%3A%22aad%22%2C%22display%22%3A%22page%22%2C%22state%22%3A%22abcd%22%2C%22redirect_uri%22%3A%22https%3A%2F%2Fguoenyue.github.io%2FgetMStoken%2Fdemo.html%22%2C%22scope%22%3A%22user.read%2Cmail.send%22%2C%22callback%22%3A%22_hellojs_9mnhsgss%22%2C%22page_uri%22%3A%22https%3A%2F%2Fguoenyue.github.io%2FgetMStoken%2Findex.html%22%7D&scope=user.read&prompt=consent&nonce=12345";
 	</script>
 </body>
 </html>
