--- a/demo.html
+++ b/demo.html
@@ -59,7 +59,7 @@
 		
 		
 		$("#logoutbtn").on("click",function(){
-			window.loadtion.href="https://login.microsoftonline.com/common/oauth2/v2.0/logout?post_logout_redirect_uri=https%3A%2F%2Fguoenyue.github.io%2FgetMStoken%2Flogout.html";
+			window.location.href="https://login.microsoftonline.com/common/oauth2/v2.0/logout?post_logout_redirect_uri=https%3A%2F%2Fguoenyue.github.io%2FgetMStoken%2Flogout.html";
 		})
 		
 		function parseSearch(search){
