--- a/Authorization/login.html
+++ b/Authorization/login.html
@@ -5,6 +5,7 @@
 	<title>login</title>
 </head>
 <body>
+	<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.js"></script>
 	<script type="text/javascript">
 		var search=parseSearch(window.location.hash.substr(1));
 		
