--- a/Authorization/login.html
+++ b/Authorization/login.html
@@ -14,7 +14,7 @@
 
 		var loginUrl="https://login.microsoftonline.com/common/oauth2/v2.0/token";
 
-		var locationGetUrl="client_id="+clientId+"&code="+search.code+"&grant_type=authorization_code&response_mode=query&scope=https%3A%2F%2Fgraph.microsoft.com%2Fmail.read&state=12345&redirect_uri="+encodeURIComponent("https://guoenyue.github.io/getMStoken/Authorization/loginProxy.html");
+		var locationGetUrl="client_id="+clientId+"&code="+search.code+"&grant_type=authorization_code&scope=https%3A%2F%2Fgraph.microsoft.com%2Fmail.read&state=12345&redirect_uri="+encodeURIComponent("https://guoenyue.github.io/getMStoken/Authorization/loginProxy.html");
 
 
 
