--- a/Authorization/login.html
+++ b/Authorization/login.html
@@ -7,7 +7,7 @@
 <body>
 	<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.js"></script>
 	<script type="text/javascript">
-		var search=parseSearch(window.location.hash.substr(1));
+		var search=parseSearch(window.location.search.substr(1));
 		
 
 		var clientId="bd3ab4b7-6744-4f76-82e6-82094ea9238a";
